--- a/src/config.yml
+++ b/src/config.yml
@@ -37,7 +37,7 @@ gamemodes:
       threshold: all             # Give a prize to the player(s) who has/have the highest score after all questions
       prizelist: gems
       numwinners: 3              # The 3 best players get a prize each
-      numwinners: 10%            # Alternative: The best 10% of players get a prize each
+      numwinners: 10%            # Alternative: The best 10% of players get a prize each - TODO not implemented yet!
       startmessage: "Starting knowledge event."
       endmessage: "Ending knowledge event. Gem prizes go to %playerlist%"
       itemmessage: "%playerlist% found the correct answer %answer% first and get a point each"
@@ -47,3 +47,31 @@ gamemodes:
       copyfrom: event
       # You can omit this section and start the easter event with "/knowledge mode event easterquestions.txt".
       filepattern: easterquestions.txt
+# This asks a question from the test file every 15 seconds, and gives the answer 
+# after another 30 seconds. This time should be enough to answer and do a 
+# /pok stats before and after the answer is shown.
+# Test mode 1 runs all questions, allows up to 3 players to answer a question,
+# and awards the prize after all questions have been answered. The best 2
+# players win a prize each.
+  - test1:
+      delay: 15
+      answertime: 30
+      answercount: 3
+      filepattern: test.txt
+      prefix: "&e"
+      nextgamemode: default
+      threshold: all
+      prizelist: gems
+      numwinners: 2
+      startmessage: "starting test event 1 - 3 answers per question, prize at end"
+      endmessage:   "ending test event 1"
+      itemmessage:  "&2answer %answer% found by %playerlist%"
+      expiremessage: "&canswer %answer% not found by anyone"
+  - test2:
+# In this test, only the fastest answer counts, and the best player(s) get a
+# prize after 3 questions. As there are 8 questions in the question file,
+# a prize should be given after 3, 6, and 8 questions.
+      copyfrom: test1
+      answercount: 1
+      threshold: 3
+      startmessage: "starting test event 2 - 1 answer per question, prize after each 3"
