--- a/src/config.yml
+++ b/src/config.yml
@@ -20,7 +20,8 @@ gamemodes:
       answertime: 30             # seconds to answer, if noone answers within this time the question expires
       answercount: 1             # Only the first player who answers gets a score point
       filepattern: default*.txt  # Cycle between all files that are named "default*"
-      prefix: "&5"               # Use dark purple for questions
+      prefix: "&5"               # all messages in dark purple
+      questionprefix: "&2Trivia Time! &6Use /ans to answer: &5"
       nextgamemode: default      # After finishing a round, restart the same game mode
       threshold: 1               # Give a prize to the "winning" player after every question
       prizelist: rocks
@@ -32,7 +33,8 @@ gamemodes:
       answertime: 10             # people are expected to respond much faster here
       answercount: 3             # The 3 first players to answer get a score point each
       filepattern: event*.txt    # use one of a special set of questions/answers
-      prefix: "&b"               # ask questions in Aqua
+      prefix: "&b"               # all messages in Aqua
+      questionprefix: "Trivia Event! "
       nextgamemode: default      # Go to default mode after finishing a q/a file
       threshold: all             # Give a prize to the player(s) who has/have the highest score after all questions
       prizelist: gems
