fixed ItemStack amounts getting garbled; added Vault softdepends; give out money if vault is present

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -12,3 +12,4 @@ commands:
         description: Manage the PoK plugin
         usage: /pok stats|answer|mode <modename> (<filename>)|reload
         permission: PoK.admin
+softdepend: [Vault]
